update file location

--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1598,7 +1598,7 @@ var e = "2000";
   
 if(a==d && b==c && z==e)
 {
-window.open("file:///C:/Users/TAYYAB%20ALI/Desktop/qatar/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index2.html");
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index2.html");
 }
 
   
