--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index2.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index2.html
@@ -1593,7 +1593,7 @@ tr:nth-child(even) {
 
    <tr>
     <td>Name</td>
-    <td>Muhammad  Qadeer</td>
+    <td>Muhammad Usman</td>
   </tr>
    <tr>
     <td>Nationality</td>
@@ -1621,9 +1621,20 @@ tr:nth-child(even) {
   </tr>
    <tr>
     <td>Passport Number</td>
-    <td>AM4425612</td>
+    <td>AM4425162</td>
   </tr>
-
+    <tr>
+    <td>Duration Of Residence</td>
+    <td>2-Years</td>
+  </tr>
+  <tr>
+    <td>Visa Type</td>
+    <td>Work-Multi Entry</td>
+  </tr>
+  <tr>
+    <td>Purpose Of Visa</td>
+    <td>Work</td>
+  </tr>
 </table>
 
 
