--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1738,7 +1738,7 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
 				<div class="panel-body">
 					<div class="row">
 						<div class="col-xs-12  col-sm-5 " style="padding-top: 8px;">
-							<label class="box-title" id="appno_alt_ns_Z7_N90A19O0KG80B0A1F3NMPT10D0_" for="part1">Application Number  </label>
+							<label class="box-title" id="" for="part1">Application Number  </label>
 						</div>
 						<div class="col-xs-12 col-sm-7" style="padding: 0px;" >
 							<!-- <div class="col-xs-3 " style="float: left !important;">
@@ -1791,7 +1791,7 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
 								<div class="col-xs-12 col-sm-5 radio-selection">
 									<div class="form-group form-inline">
 										<INPUT type="radio"  checked=""   name="searchBy" id="" value=""  data-toggle="radio">
-										<label class="radio radio-label" id="" for="radioByDate">  Application Date &nbsp;(yyyy-mm-dd)</label>
+										<label class="radio radio-label" id="demo2" for="radioByDate">  Application Date &nbsp;(yyyy-mm-dd)</label>
 									</div>
 								</div>
 	
@@ -2625,7 +2625,7 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
 						<div class="row" style="padding-bottom: 15px; padding-top: 15px;">
 							<div class="col-xs-12  col-sm-5" style="padding-left: 150px;">
 								
-									<div  id="demo3"> <h3> 348</h3></div>
+									<div  id="demo3" > <h3> 348</h3></div>
 							
 							</div>
 
