--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -2625,13 +2625,13 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
 						<div class="row" style="padding-bottom: 15px; padding-top: 15px;">
 							<div class="col-xs-12  col-sm-5" style="padding-left: 150px;">
 								
-									<div  id="demo3" > <h3> 348</h3></div>
+									<div> <h3> 348</h3></div>
 							
 							</div>
 
 							<div class="col-xs-12 col-sm-7" style="padding: 5px 0px;">
 								<div class="col-xs-12 col-sm-4 padnone" >
-									<input type="text" size="5" maxlength="" autocomplete="off"  name="" id=""
+									<input type="text" size="5" maxlength="" autocomplete="off"  name="" id="demo3"
 										class="" style="width: 115px;" />
 								</div>
 								<div class="col-xs-12 col-sm-5 padnone" >
