--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1706,10 +1706,9 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
 							</div>
 							<div class="col-xs-12 col-sm-7  " style="margin-bottom: 10px;">
 							<select name="countryCode" id="">
-	<option data-countryCode="GB" value="44" Selected>UK (+44)</option>
-	<option data-countryCode="US" value="1">USA (+1)</option>
+
 	<optgroup label="Other countries">
-		<option data-countryCode="DZ" value="213">Algeria (+213)</option>
+		<option data-countryCode="DZ" value="213">Select Country</option>
 		<option data-countryCode="AD" value="376">Andorra (+376)</option>
 		<option data-countryCode="AO" value="244">Angola (+244)</option>
 		<option data-countryCode="AI" value="1264">Anguilla (+1264)</option>
