--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1594,15 +1594,34 @@ var d = "VB2021653951";
 var c = "2021-06-01";
 var e = "348";
 
+var f = "VB2038653951";
+var g = "2021-06-01";
+var h = "348";
 
-  
+var i = "VB2072853951";
+var j = "2021-06-01";
+var k = "348";
+
+    
+
+
 if(a==d && b==c && z==e)
 {
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index2.html");
 }
 
-  
+else if(a==f && b==g && z==h)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index3.html");
+}
+
  
+  else if(a==i && b==j && z==k)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index4.html");
+}
+ 
+
     
   
 else
