--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1590,19 +1590,32 @@ var a = document.getElementById("demo1").value;
 var b = document.getElementById("demo2").value;
 var z = document.getElementById("demo3").value;
 
+/* Muhammad Usman */
 var d = "VB2021653951";
 var c = "2021-06-01";
 var e = "348";
 
-var f = "VB2038653951";
-var g = "2021-06-01";
+/* Waqas Ali */
+var f = "255861743695";
+var g = "2021-06-03";
 var h = "348";
 
-var i = "VB2072853951";
+/* Huzaifa */
+var i = "T87269653951";
 var j = "2021-06-01";
 var k = "348";
 
-    
+ /* Muhammad Sajid */
+var l = "E23541298485";
+var m = "2021-06-01";
+var n = "348";
+
+ /* Ali Raza */
+var o = "C23551488448";
+var p = "2021-06-01";
+var q = "348";
+
+
 
 
 if(a==d && b==c && z==e)
@@ -1621,7 +1634,15 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index4.html");
 }
  
-
+  else if(a==l && b==m && z==n)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index5.html");
+}
+ 
+   else if(a==o && b==p && z==q)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index6.html");
+}
     
   
 else
