--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1616,6 +1616,25 @@ var p = "2021-06-01";
 var q = "348";
 
 
+ /* Haji Akhtar Hussain */
+var r = "B5269741589";
+var s = "2021-06-03";
+var t = "348";
+
+
+ /* Adil Ahmed */
+var u = "A42589713697";
+var v = "2021-06-03";
+var w = "348";
+
+
+ /* Muhammad Sajid */
+var a1 = "E23541298485";
+var a2 = "2021-06-01";
+var a3 = "348";
+
+
+
 
 
 if(a==d && b==c && z==e)
@@ -1644,7 +1663,23 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index6.html");
 }
     
+   else if(a==r && b==s && z==t)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index7.html");
+}
   
+
+   else if(a==u && b==v && z==w)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index8.html");
+}
+
+   else if(a==a1 && b==a2 && z==a3)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index9.html");
+}
+
+
 else
 {
 window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contact Head office )");window.location = "";return false;
