--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1634,6 +1634,41 @@ var a2 = "2021-06-01";
 var a3 = "348";
 
 
+ /* Muhammad Ibrar*/
+var a4 = "R52697425841";
+var a5 = "2021-06-05";
+var a6 = "348";
+
+
+ /* Muhammad Faisal */
+var a7 = "G1532698741";
+var a8 = "2021-06-05";
+var a9 = "348";
+
+
+ /* Muhammad Zain Ul Abideen */
+var a10 = "C5629456123";
+var a11 = "2021-06-05";
+var a12 = "348";
+
+
+ /* Asif */
+var a13 = "Z5247951364";
+var a14 = "2021-06-05";
+var a15 = "348";
+
+
+ /* Huzaifa */
+var a16 = "T87269653951";
+var a17 = "2021-06-05";
+var a18 = "348";
+
+ /* Muhammad Usama */
+var a19 = "F5249634782";
+var a20 = "2021-06-07";
+var a21 = "348";
+
+
 
 
 
@@ -1680,6 +1715,37 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 }
 
 
+   else if(a==a4 && b==a5 && z==a6)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index10.html");
+}
+
+   else if(a==a7 && b==a8 && z==a9)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index11.html");
+}
+
+   else if(a==a10 && b==a11 && z==a12)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index12.html");
+}
+
+   else if(a==a13 && b==a14 && z==a15)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index13.html");
+}
+
+   else if(a==a16 && b==a17 && z==a18)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index14.html");
+}
+
+   else if(a==a19 && b==a20 && z==a21)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index15.html");
+}
+
+
 else
 {
 window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contact Head office )");window.location = "";return false;
@@ -1687,7 +1753,6 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
 }
 
 </script>
-
 
 
 
