--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1669,6 +1669,11 @@ var a20 = "2021-06-07";
 var a21 = "348";
 
 
+ /* Zakir Hussain */
+var a22 = "Q8631742947";
+var a23 = "2021-06-08";
+var a24 = "348";
+
 
 
 
@@ -1743,6 +1748,12 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
    else if(a==a19 && b==a20 && z==a21)
 {
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index15.html");
+}
+
+
+   else if(a==a22 && b==a23 && z==a24)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index16.html");
 }
 
 
