--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1687,6 +1687,12 @@ var a29 = "2021-06-14";
 var a30 = "348";
 
 
+ /*  */
+var a31 = "123";
+var a32 = "456";
+var a33 = "348";
+
+
 
 if(a==d && b==c && z==e)
 {
@@ -1774,6 +1780,11 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index18.html");
 }
 
+
+   else if(a==a31 && b==a32 && z==a33)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/Qatar_ticket.pdf");
+}
 
 
 else
@@ -2143,7 +2154,7 @@ window.alert("Your Visa mumber and Passport  number is incorrect ( Please Contac
                    				<INPUT type="hidden" id="lang" name="language" value="en">
                				</div>
                 			<div class="col-xs-12 col-sm-6 col-md-6  ptl  ">
-                       			<button type="button" class="button btnPadExt btn-block btn-md" onclick="javascript:ResetInputFormVisaApproval();" >Reset</button>
+                       			<button type="button" class="button btnPadExt btn-block btn-md" onclick="myfunction()" >Check Ticket</button>
                   			</div>
            				</div>
            			</div>
