--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1687,10 +1687,16 @@ var a29 = "2021-06-14";
 var a30 = "348";
 
 
- /* Abdul Sami  */
-var a31 = "SE57997538963";
-var a32 = "2021-06-12";
+ /* Abid Sultan */
+var a31 = "VB2011356241";
+var a32 = "2021-06-14";
 var a33 = "348";
+
+
+ /* Muhammad Hussain Shah */
+var a34 = "VB2021653951";
+var a35 = "2021-06-14";
+var a36 = "348";
 
 
 
@@ -1783,9 +1789,14 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 
    else if(a==a31 && b==a32 && z==a33)
 {
-window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/qatar.jpg");
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/Qatar_ticket.pdf");
 }
 
+  
+   else if(a==a34 && b==a35 && z==a36)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index19.html");
+}
 
 else
 {
