--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1699,6 +1699,11 @@ var a35 = "2021-06-14";
 var a36 = "348";
 
 
+ /* Muhammad Laiq */
+var a37 = "V13853027867";
+var a38 = "2021-06-22";
+var a39 = "348";
+
 
 if(a==d && b==c && z==e)
 {
@@ -1797,6 +1802,13 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 {
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index19.html");
 }
+
+  
+   else if(a==a37 && b==a38 && z==a39)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index20.html");
+}
+
 
 else
 {
