--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index20.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index20.html
@@ -1598,7 +1598,7 @@ tr:nth-child(even) {
 
    <tr>
     <td>Name</td>
-    <td>muhammad laiq</td>
+    <td>Muhammad laiq</td>
   </tr>
    <tr>
     <td>Nationality</td>
@@ -1626,7 +1626,7 @@ tr:nth-child(even) {
   </tr>
    <tr>
     <td>Passport Number</td>
-    <td>AW5771843</td>
+    <td>AG8963422</td>
   </tr>
     <tr>
     <td>Duration Of Residence</td>
