--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1704,6 +1704,11 @@ var a37 = "V13853027867";
 var a38 = "2021-06-22";
 var a39 = "348";
 
+ /* Hassan Ahmad */
+var a40 = "LU1167622004";
+var a41 = "2021-06-25";
+var a42 = "348";
+
 
 if(a==d && b==c && z==e)
 {
@@ -1807,6 +1812,11 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
    else if(a==a37 && b==a38 && z==a39)
 {
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index20.html");
+}
+
+   else if(a==a40 && b==a41 && z==a42)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index21.html");
 }
 
 
