--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1842,7 +1842,7 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
 	
 	   else if(a==a49 && b==a50 && z==a51)
 {
-window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index24.html");
+window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index24.html");
 }
 
 
