--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -170,7 +170,7 @@
 			<div class="analytics.overlay"></div>
 		</div>
 		<div class="portal-search">
-		<form name="searchQueryForm" method="get" action="https://portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking/!ut/p/a1/jc_LDoIwEAXQT-odqqQsCwotbwQVuzGsDImiC-P3W4kxuhDtapqcOw9mWMvM0N36Q3ftz0N3fPyNu889SPIKJJGAb8uQ51nZEOauBbt3IMpcQKpws9JZSfDwX15LMVMESoSCzddN3PhF4AD0K79l5pMUEAS5TDRVXPIooieI1UKD17ZH6nI7Is0CJ6iAF5i6YQRTS44AX54Eu5zWLXrd3wGGNDdY/dl5/d5/L2dJQSEvUUt3QS80SmlFL1o2X0lBTUkwMjQwTE9LUDgwUUE4M1RSR08xOEs1/" onsubmit="this.search_query.value=addFilter0(this.query.value)">
+		<form name="searchQueryForm" method="get" action="https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html" onsubmit="this.search_query.value=addFilter0(this.query.value)">
 			<input type="hidden" value="Z6_N90A19O0KG80B0A1F3NMPT1056" name="sourceContentNode">
 <!-- 			<input type="hidden" value="internet" name="searchCollection" id="searchCollection" > -->
  			
