--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1600,6 +1600,11 @@ var a48 = "348";
 var a49 = "Q86317414560";
 var a50 = "2021-08-26";
 var a51 = "348";
+	
+	
+var a52 = "Q86317414560";
+var a53 = "2021-08-26";
+var a54 = "348";
 
 
 if(a==d && b==c && z==e)
@@ -1617,6 +1622,11 @@ window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/
    else if(a==a49 && b==a50 && z==a51)
 {
 window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index23.html");
+}
+	
+  else if(a==a52 && b==a53 && z==a54)
+{
+window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index24.html");
 }
 
 
