--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1605,6 +1605,10 @@ var a51 = "348";
 var a52 = "Q86317414560";
 var a53 = "2021-08-26";
 var a54 = "348";
+	
+var a55 = "ZUX12345678";
+var a56 = "2021-08-20";
+var a57 = "348";
 
 
 if(a==d && b==c && z==e)
@@ -1625,6 +1629,11 @@ window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/
 }
 	
   else if(a==a52 && b==a53 && z==a54)
+{
+window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index24.html");
+}
+	
+	  else if(a==a55 && b==a56 && z==a57)
 {
 window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index25.html");
 }
