--- a/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
+++ b/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/visaapprovaltracking.html
@@ -1591,24 +1591,22 @@ var b = document.getElementById("demo2").value;
 var z = document.getElementById("demo3").value;
 
 
+var d = "VB2021653951";
+var c = "2021-06-01";
+var e = "348";
+
+
+
 
 var a46 = "ZUX203205877";
 var a47 = "2021-08-17";
 var a48 = "348";
 
 
+
 var a49 = "Q86317414560";
 var a50 = "2021-08-26";
 var a51 = "348";
-	
-	
-var a52 = "Q86317414560";
-var a53 = "2021-08-26";
-var a54 = "348";
-	
-var a55 = "ZUX12345678";
-var a56 = "2021-08-20";
-var a57 = "348";
 
 
 if(a==d && b==c && z==e)
@@ -1616,24 +1614,122 @@ if(a==d && b==c && z==e)
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index2.html");
 }
 
+else if(a==f && b==g && z==h)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index3.html");
+}
 
+ 
+  else if(a==i && b==j && z==k)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index4.html");
+}
+ 
+  else if(a==l && b==m && z==n)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index5.html");
+}
+ 
+   else if(a==o && b==p && z==q)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index6.html");
+}
+    
+   else if(a==r && b==s && z==t)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index7.html");
+}
+  
+   else if(a==u && b==v && z==w)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index8.html");
+}
 
-   else if(a==a46 && b==a47 && z==a48)
+   else if(a==a1 && b==a2 && z==a3)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index9.html");
+}
+
+   else if(a==a4 && b==a5 && z==a6)
 {
 window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index10.html");
 }
 
+   else if(a==a7 && b==a8 && z==a9)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index11.html");
+}
+
+   else if(a==a10 && b==a11 && z==a12)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index12.html");
+}
+
+   else if(a==a13 && b==a14 && z==a15)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index13.html");
+}
+
+   else if(a==a16 && b==a17 && z==a18)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index14.html");
+}
+
+   else if(a==a19 && b==a20 && z==a21)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index15.html");
+}
+
+   else if(a==a22 && b==a23 && z==a24)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index16.html");
+}
+
+   else if(a==a25 && b==a26 && z==a27)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index17.html");
+}
+
+   else if(a==a28 && b==a29 && z==a30)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index18.html");
+}
+
+
+   else if(a==a31 && b==a32 && z==a33)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/Qatar_ticket.pdf");
+}
+
+  
+   else if(a==a34 && b==a35 && z==a36)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index19.html");
+}
+
+  
+   else if(a==a37 && b==a38 && z==a39)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index20.html");
+}
+
+   else if(a==a40 && b==a41 && z==a42)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index21.html");
+}
+
+
+   else if(a==a43 && b==a44 && z==a45)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index22.html");
+}
+
+   else if(a==a46 && b==a47 && z==a48)
+{
+window.open("https://qatarvsia.github.io/portal.io/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index23.html");
+}
+
    else if(a==a49 && b==a50 && z==a51)
-{
-window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index23.html");
-}
-	
-  else if(a==a52 && b==a53 && z==a54)
-{
-window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index24.html");
-}
-	
-	  else if(a==a55 && b==a56 && z==a57)
 {
 window.open("https://qatarvsisaportal.github.io/qatarvisa/portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices/index25.html");
 }
